Changes for 2.2.4rc1

New features:
.......... [ZBX-7811] added example robots.txt file (Richlv)
A.F....... [ZBX-1357] updated Brazilian Portuguese, Italian, Japanese, Romanian, Russian, Slovak and Spanish translations; thanks to Zabbix translators (Richlv)
........S. [ZBX-7555] removed "select" statement from the history cache; increased the cache performance (Sasha)

Bug fixes:
.......P.. [ZBX-7968] fixed bug when proxy stopped sending history data if it had more than 1000 unmonitored item values in history table; thanks to Corey Shaw for identifying the issue and providing a patch (wiper)
.......PS. [ZBX-8251] fixed possible crash when trying to get item value from a failed vmware service with log level set to debug (wiper)
........S. [ZBX-8092] added disabled hosts, disabled items and enabled items of disabled hosts to the configuration cache for correct macro expansion in notifications (igors)
........S. [ZBX-8230] changed maintenance status log messages from warning to debug level (Juris)
...G...... [ZBX-7098] improved handling of log file rotation/truncation for logrt[] and log[] items (Andris)
........S. [ZBX-8210] fixed crash when attempting to evaluate an eventlog key for items obtained from the value cache (Juris)
........S. [ZBX-8219] fixed regression in ipmi checks to support on/off values for sent commands (Juris)
...G...... [ZBX-8213] fixed library loading code on Windows to prevent potential crash condition (Juris)
...G...... [ZBX-8223] fixed compilation of dummy module on 64-bit platforms by adding "-fPIC" (asaveljevs)
.........T [ZBX-7387] changed default memory usage graph display method for operating system templates (Juris)
A.F....... [ZBX-8101] fixed exporting maps from Oracle database (Eduard, Ivo)
...G...... [ZBX-8198] decreased verbosity of Windows agent with DebugLevel=4 (Nikolaj)
...G...PS. [ZBX-7729] added data alignment to prevent crash on non x86 processors; thanks to Pablo Ruiz for patch (Nikolaj)